[gd_scene load_steps=62 format=3 uid="uid://b1an0fegyfxgt"]

[ext_resource type="Script" uid="uid://24fku4hjw18q" path="res://scenes/Washer/washer.gd" id="1_lfd6o"]
[ext_resource type="Texture2D" uid="uid://b8j768yj0o20" path="res://assets/background_art/laundromat_bg_full.png" id="2_fpw1r"]
[ext_resource type="Texture2D" uid="uid://b7tyyfyd7qpan" path="res://assets/background_art/coin_chute_bg.png" id="2_iw80o"]
[ext_resource type="Script" uid="uid://ccsr5veij22yb" path="res://godot-donut-collision-polygon-2d-7780d026ae3d4a37fe68f43cc1f97ba664dd775d/addons/donut_collision_polygon2D/donut_collision_polygon2D.gd" id="2_mgpd2"]
[ext_resource type="Script" uid="uid://bdqmepomsr402" path="res://scenes/Washer/seed_spawner.gd" id="3_p4vi5"]
[ext_resource type="Texture2D" uid="uid://c8eqiftm38puc" path="res://assets/ui_elements/pinball_spring.png" id="4_kt4jv"]
[ext_resource type="Script" uid="uid://3fbkoxk0bfys" path="res://scenes/Washer/pinball_mechanism.gd" id="4_l1yce"]
[ext_resource type="PackedScene" uid="uid://d0ka7875s2t78" path="res://scenes/Seed/seed.tscn" id="4_ufg6d"]
[ext_resource type="Texture2D" uid="uid://blarbxvwd15hh" path="res://assets/ui_elements/shop_bg.png" id="4_xipsq"]
[ext_resource type="Script" uid="uid://c7hn4iwn2hwt" path="res://scripts/UI/speed_slider.gd" id="5_4too1"]
[ext_resource type="Texture2D" uid="uid://djpem5hh3ane0" path="res://assets/ui_elements/shop_glass_and_rim.png" id="5_anttn"]
[ext_resource type="Texture2D" uid="uid://cbj1o5xg38bn2" path="res://assets/ui_elements/pinball_button_off.png" id="5_l1yce"]
[ext_resource type="Texture2D" uid="uid://cl4ys437wipo1" path="res://assets/ui_elements/coin_pipe_inactive.png" id="6_8q70s"]
[ext_resource type="Texture2D" uid="uid://dgwfi1bdaievo" path="res://assets/ui_elements/pinball_button_on.png" id="6_18e17"]
[ext_resource type="Texture2D" uid="uid://bsj5w1dhyn67d" path="res://assets/background_art/door_ring.png" id="6_jy8l0"]
[ext_resource type="Texture2D" uid="uid://wv5lj061ctp8" path="res://assets/ui_elements/coin_pipe_active.png" id="7_1h2w1"]
[ext_resource type="PackedScene" uid="uid://62kfcgolanpg" path="res://scenes/Sprinkler/sprinkler.tscn" id="7_1n734"]
[ext_resource type="Texture2D" uid="uid://do1fcos5ajugc" path="res://assets/background_art/door_glass.png" id="7_8q70s"]
[ext_resource type="PackedScene" uid="uid://buev7i4viyf3s" path="res://scenes/CoinSlot/coin_slot.tscn" id="8_cphwb"]
[ext_resource type="Script" uid="uid://dqjylnfytfljy" path="res://scenes/Washer/coin_pipe_active.gd" id="8_qlpwf"]
[ext_resource type="Texture2D" uid="uid://ccsxws80owbn8" path="res://assets/background_art/laundromat_drum_interior.png" id="9_8q70s"]
[ext_resource type="Script" uid="uid://cm5wbdgl82aw0" path="res://scenes/Washer/door.gd" id="9_off0q"]
[ext_resource type="Shader" uid="uid://cv60oypy7rqts" path="res://scenes/Washer/foregroundplants.gdshader" id="11_qlpwf"]
[ext_resource type="Texture2D" uid="uid://cm7bv7moibpw2" path="res://assets/background_art/big_plant_bottom_right.png" id="12_adkea"]
[ext_resource type="Texture2D" uid="uid://plup3w40kvh8" path="res://assets/background_art/big_plant_bottom_left.png" id="13_clmdp"]
[ext_resource type="Texture2D" uid="uid://s8fboq0lxjh6" path="res://assets/background_art/big_plant_top_left.png" id="14_s8w7r"]
[ext_resource type="Texture2D" uid="uid://bo6p4q7y00it6" path="res://assets/background_art/big_plant_top_middle_left.png" id="15_tp1mv"]
[ext_resource type="Texture2D" uid="uid://dxno7a0w8ml43" path="res://assets/background_art/big_plant_top_middle_right.png" id="16_kt4jv"]
[ext_resource type="Texture2D" uid="uid://c600wbtmdpmdy" path="res://assets/ui_elements/tool_heatlamp_on.png" id="16_vfjhv"]
[ext_resource type="Texture2D" uid="uid://cfexfax22asm7" path="res://assets/background_art/big_plant_top_right.png" id="17_l1yce"]
[ext_resource type="Texture2D" uid="uid://01n46d84jryg" path="res://assets/ui_elements/tool_heatlamp_off.png" id="17_r63ys"]
[ext_resource type="Texture2D" uid="uid://qpi4vc6iwns7" path="res://assets/ui_elements/reroll_shop_icon.png" id="18_1h2w1"]
[ext_resource type="Texture2D" uid="uid://coganxbftx6u3" path="res://assets/ui_elements/tool_lamp_on.png" id="18_rylyh"]
[ext_resource type="Texture2D" uid="uid://nta87vxlofxk" path="res://assets/ui_elements/tool_lamp_off.png" id="19_clmdp"]
[ext_resource type="Texture2D" uid="uid://bp1w0jjlrn3ga" path="res://assets/ui_elements/tool_center.png" id="22_rylyh"]
[ext_resource type="Script" uid="uid://d2sj0q3oo2ft6" path="res://scenes/Washer/cavity.gd" id="25_ee7q1"]
[ext_resource type="Script" uid="uid://ctfsujuv2qtsj" path="res://scripts/Utility/sticky_slices/sticky_slices.gd" id="28_ek3cj"]
[ext_resource type="PackedScene" uid="uid://blvyjf466y8mk" path="res://scenes/Sprinkler/heat_particles.tscn" id="28_yxkay"]
[ext_resource type="PackedScene" uid="uid://dcb55bhtkbd0i" path="res://scenes/Sprinkler/light_particles.tscn" id="31_pbjm3"]
[ext_resource type="Texture2D" uid="uid://bwe6sompyu8c6" path="res://assets/ui_elements/play_button_ready.png" id="33_4w84q"]
[ext_resource type="Script" uid="uid://ds0wpfgsspvx5" path="res://scenes/ShopScreen/shop_screen_ui.gd" id="34_oibin"]
[ext_resource type="Texture2D" uid="uid://babg7jjwnaki1" path="res://assets/ui_elements/speed_gauge_indicator.png" id="34_tijac"]
[ext_resource type="PackedScene" uid="uid://dygjq4gkwhjxs" path="res://scenes/SeedShopPlantCard/seed_shop_popup.tscn" id="36_off0q"]
[ext_resource type="Texture2D" uid="uid://c5rgx5uk0jmy7" path="res://assets/ui_elements/clock_bg.png" id="37_a78va"]
[ext_resource type="Script" uid="uid://blj5m6sb04c16" path="res://scripts/UI/point_display.gd" id="40_na54g"]
[ext_resource type="Script" uid="uid://84nyvtos2mu4" path="res://scenes/Washer/target_label.gd" id="41_ij2v1"]
[ext_resource type="Texture2D" uid="uid://dp3cnkjgadf5j" path="res://assets/ui_elements/speed_gauge_base.png" id="42_hmpjo"]
[ext_resource type="Texture2D" uid="uid://bbeg2fvcmy6l0" path="res://assets/ui_elements/bunny_move.png" id="45_ib3l4"]
[ext_resource type="Texture2D" uid="uid://djw4afsuricv2" path="res://assets/ui_elements/bunny_stop.png" id="45_pjvq3"]
[ext_resource type="Texture2D" uid="uid://56psvt4nhoyg" path="res://assets/ui_elements/turtle_stop.png" id="46_cjp45"]
[ext_resource type="Texture2D" uid="uid://y5xvtyung7xg" path="res://assets/ui_elements/turtle_move.png" id="47_loftn"]
[ext_resource type="Script" uid="uid://be70wckfs3oe" path="res://scripts/Utility/timeout.gd" id="48_pjvq3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7nn5q"]
radius = 81.18

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vfjhv"]
shader = ExtResource("11_qlpwf")
shader_parameter/waveAmplitude = 0.05
shader_parameter/correctVertex = true
shader_parameter/waveFrequency = 10.0
shader_parameter/verticalWave = true
shader_parameter/keepTransparency = true
shader_parameter/useTime = true
shader_parameter/waveSpeed = 1.0
shader_parameter/progress = 0.0
shader_parameter/firstHalf = 0.5
shader_parameter/secondHalf = 0.5
shader_parameter/freezeFirstHalf = false
shader_parameter/freezeSecondHalf = false

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_mgpd2"]
rough = true
bounce = 0.33

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mgpd2"]
radius = 25.0
height = 56.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a78va"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_50xyq"]
texture = ExtResource("34_tijac")

[sub_resource type="SpriteFrames" id="SpriteFrames_ee7q1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("45_pjvq3")
}, {
"duration": 1.0,
"texture": ExtResource("45_ib3l4")
}],
"loop": true,
"name": &"bunny",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ek3cj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("47_loftn")
}, {
"duration": 1.0,
"texture": ExtResource("46_cjp45")
}],
"loop": true,
"name": &"turtle",
"speed": 1.5
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rylyh"]
radius = 199.199

[node name="Washer" type="Node2D" node_paths=PackedStringArray("seed_spawner", "spin_duration_label", "BUNNY_CLOCK", "bunny", "turtle", "SPEED_SLIDER")]
script = ExtResource("1_lfd6o")
seed_spawner = NodePath("SeedSpawnLocation")
spin_duration_label = NodePath("Control/Duration Label")
BUNNY_CLOCK = NodePath("BunnyClock")
bunny = NodePath("Control/Bunny")
turtle = NodePath("Control/Turtle")
SPEED_SLIDER = NodePath("Control/VBoxContainer/SpeedSlider")

[node name="CoinChuteBg" type="Sprite2D" parent="."]
z_index = -1000
position = Vector2(-245, 207)
scale = Vector2(0.212295, 0.212295)
texture = ExtResource("2_iw80o")

[node name="Background" type="Sprite2D" parent="."]
z_index = -12
position = Vector2(-224.421, 69.8456)
scale = Vector2(0.212295, 0.212295)
texture = ExtResource("2_fpw1r")

[node name="PinballMechanism" type="Area2D" parent="." node_paths=PackedStringArray("queue")]
position = Vector2(-200, -17)
scale = Vector2(0.212295, 0.212295)
script = ExtResource("4_l1yce")
queue = NodePath("Queue")

[node name="PinballSpring" type="Sprite2D" parent="PinballMechanism"]
texture = ExtResource("4_kt4jv")

[node name="PinballButtonOff" type="Sprite2D" parent="PinballMechanism"]
position = Vector2(-127.181, -1.52588e-05)
texture = ExtResource("5_l1yce")

[node name="PinballButtonOn" type="Sprite2D" parent="PinballMechanism"]
position = Vector2(-127.181, -1.52588e-05)
texture = ExtResource("6_18e17")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PinballMechanism"]
position = Vector2(-141.313, -9.05991e-06)
shape = SubResource("CircleShape2D_7nn5q")

[node name="Queue" type="Node2D" parent="PinballMechanism"]

[node name="QueuedSeed1" parent="PinballMechanism/Queue" instance=ExtResource("4_ufg6d")]
z_index = -10
position = Vector2(122.471, -4.71043)
rotation = 0.865989
scale = Vector2(5, 5)
freeze = true
script = null

[node name="QueuedSeed2" parent="PinballMechanism/Queue" instance=ExtResource("4_ufg6d")]
z_index = -10
position = Vector2(65.946, 94.2085)
rotation = -0.420574
scale = Vector2(5, 5)
freeze = true
script = null

[node name="QueuedSeed3" parent="PinballMechanism/Queue" instance=ExtResource("4_ufg6d")]
z_index = -10
position = Vector2(61.2355, 207.259)
rotation = 0.752786
scale = Vector2(5, 5)
freeze = true
script = null

[node name="QueuedSeed4" parent="PinballMechanism/Queue" instance=ExtResource("4_ufg6d")]
z_index = -10
position = Vector2(61.2355, 329.73)
rotation = 2.66151
scale = Vector2(5, 5)
freeze = true
script = null

[node name="QueuedSeed5" parent="PinballMechanism/Queue" instance=ExtResource("4_ufg6d")]
z_index = -10
position = Vector2(61.2355, 447.49)
rotation = 0.39661
scale = Vector2(5, 5)
freeze = true
script = null

[node name="QueuedSeed6" parent="PinballMechanism/Queue" instance=ExtResource("4_ufg6d")]
z_index = -10
position = Vector2(4.71033, 527.568)
rotation = 1.89405
scale = Vector2(5, 5)
freeze = true
script = null

[node name="ShopBg" type="Sprite2D" parent="."]
position = Vector2(-278.377, 58.2368)
scale = Vector2(0.212295, 0.212295)
texture = ExtResource("4_xipsq")

[node name="Door" type="Node2D" parent="."]
script = ExtResource("9_off0q")

[node name="DoorRing" type="Sprite2D" parent="Door"]
z_index = 8
z_as_relative = false
position = Vector2(-224.421, 69.8456)
scale = Vector2(0.212295, 0.212295)
texture = ExtResource("6_jy8l0")

[node name="DoorGlass" type="Sprite2D" parent="Door"]
z_index = 14
position = Vector2(-224.421, 69.8456)
scale = Vector2(0.212295, 0.212295)
texture = ExtResource("7_8q70s")

[node name="ClockBg" type="Sprite2D" parent="."]
position = Vector2(-300, -98)
scale = Vector2(0.6, 0.6)
texture = ExtResource("37_a78va")

[node name="ShopGlassAndRim" type="Sprite2D" parent="."]
z_index = 6
position = Vector2(-278.377, 58.2368)
scale = Vector2(0.212295, 0.212295)
texture = ExtResource("5_anttn")

[node name="CoinPipeInactive" type="Sprite2D" parent="."]
z_index = 40
position = Vector2(-233, 196)
scale = Vector2(0.212295, 0.212295)
texture = ExtResource("6_8q70s")

[node name="CoinPipeActive" type="Sprite2D" parent="."]
z_index = 40
position = Vector2(-233, 196)
scale = Vector2(0.212295, 0.212295)
texture = ExtResource("7_1h2w1")
script = ExtResource("8_qlpwf")

[node name="BigPlantBottomRight" type="Sprite2D" parent="."]
z_index = 83
material = SubResource("ShaderMaterial_vfjhv")
position = Vector2(96, 176)
scale = Vector2(0.212295, 0.212295)
texture = ExtResource("12_adkea")

[node name="BigPlantBottomLeft" type="Sprite2D" parent="."]
z_index = 83
material = SubResource("ShaderMaterial_vfjhv")
position = Vector2(-572, 224)
scale = Vector2(0.212295, 0.212295)
texture = ExtResource("13_clmdp")

[node name="BigPlantTopLeft" type="Sprite2D" parent="."]
z_index = 83
material = SubResource("ShaderMaterial_vfjhv")
position = Vector2(-535, -116)
scale = Vector2(0.212295, 0.212295)
texture = ExtResource("14_s8w7r")

[node name="BigPlantTopMiddleLeft" type="Sprite2D" parent="."]
z_index = 83
material = SubResource("ShaderMaterial_vfjhv")
position = Vector2(-333, -154)
scale = Vector2(0.212295, 0.212295)
texture = ExtResource("15_tp1mv")

[node name="BigPlantTopMiddleRight" type="Sprite2D" parent="."]
z_index = 83
material = SubResource("ShaderMaterial_vfjhv")
position = Vector2(-23.0001, -151)
scale = Vector2(0.212295, 0.212295)
texture = ExtResource("16_kt4jv")

[node name="BigPlantTopRight" type="Sprite2D" parent="."]
z_index = 83
material = SubResource("ShaderMaterial_vfjhv")
position = Vector2(193, -137)
scale = Vector2(0.212295, 0.212295)
texture = ExtResource("17_l1yce")

[node name="Cavity" type="MeshInstance2D" parent="." node_paths=PackedStringArray("soil_slicer", "center_of_cavity")]
self_modulate = Color(0.306923, 0.306923, 0.306923, 1)
position = Vector2(2, 82)
script = ExtResource("25_ee7q1")
soil_slicer = NodePath("SoilSlicer")
center_of_cavity = NodePath("CenterOfCavity")
seed_scene = ExtResource("4_ufg6d")
metadata/_custom_type_script = "uid://d2sj0q3oo2ft6"

[node name="DrumInterior" type="Sprite2D" parent="Cavity"]
position = Vector2(-1.00003, -1)
scale = Vector2(0.212295, 0.212295)
texture = ExtResource("9_8q70s")

[node name="Donut" type="StaticBody2D" parent="Cavity"]
position = Vector2(0, -80)
collision_layer = 128
physics_material_override = SubResource("PhysicsMaterial_mgpd2")

[node name="DonutCollisionPolygon2D" type="CollisionPolygon2D" parent="Cavity/Donut"]
position = Vector2(0, 80)
scale = Vector2(16.6832, 16.8187)
polygon = PackedVector2Array(6.73533e-16, -11, 2.14599, -10.7886, 4.20952, -10.1627, 6.11127, -9.14617, 7.77817, -7.77817, 9.14617, -6.11127, 10.1627, -4.20952, 10.7886, -2.14599, 11, 0, 10.7886, 2.14599, 10.1627, 4.20952, 9.14617, 6.11127, 7.77817, 7.77817, 6.11127, 9.14617, 4.20952, 10.1627, 2.14599, 10.7886, 6.73533e-16, 11, -2.14599, 10.7886, -4.20952, 10.1627, -6.11127, 9.14617, -7.77817, 7.77817, -9.14617, 6.11127, -10.1627, 4.20952, -10.7886, 2.14599, -11, 1.34707e-15, -10.7886, -2.14599, -10.1627, -4.20952, -9.14617, -6.11127, -7.77817, -7.77817, -6.11127, -9.14617, -4.20952, -10.1627, -2.14599, -10.7886, -2.0206e-15, -11, -1.65322e-15, -9, -1.75581, -8.82707, -3.44415, -8.31492, -5.00013, -7.48323, -6.36396, -6.36396, -7.48323, -5.00013, -8.31492, -3.44415, -8.82707, -1.75581, -9, 1.10215e-15, -8.82707, 1.75581, -8.31492, 3.44415, -7.48323, 5.00013, -6.36396, 6.36396, -5.00013, 7.48323, -3.44415, 8.31492, -1.75581, 8.82707, 5.51073e-16, 9, 1.75581, 8.82707, 3.44415, 8.31492, 5.00013, 7.48323, 6.36396, 6.36396, 7.48323, 5.00013, 8.31492, 3.44415, 8.82707, 1.75581, 9, 0, 8.82707, -1.75581, 8.31492, -3.44415, 7.48323, -5.00013, 6.36396, -6.36396, 5.00013, -7.48323, 3.44415, -8.31492, 1.75581, -8.82707, 5.51073e-16, -9, 0.0001, -10.9999)
script = ExtResource("2_mgpd2")
metadata/_custom_type_script = "uid://ccsr5veij22yb"

[node name="Bumps" type="StaticBody2D" parent="Cavity/Donut"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cavity/Donut/Bumps"]
position = Vector2(141, -16)
shape = SubResource("CapsuleShape2D_mgpd2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Cavity/Donut/Bumps"]
position = Vector2(168, 75)
shape = SubResource("CapsuleShape2D_mgpd2")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Cavity/Donut/Bumps"]
position = Vector2(141, 172)
shape = SubResource("CapsuleShape2D_mgpd2")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Cavity/Donut/Bumps"]
position = Vector2(72, 234)
shape = SubResource("CapsuleShape2D_mgpd2")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Cavity/Donut/Bumps"]
position = Vector2(-39, 241)
shape = SubResource("CapsuleShape2D_mgpd2")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Cavity/Donut/Bumps"]
position = Vector2(-124, 193)
shape = SubResource("CapsuleShape2D_mgpd2")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Cavity/Donut/Bumps"]
position = Vector2(-166, 111)
shape = SubResource("CapsuleShape2D_mgpd2")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Cavity/Donut/Bumps"]
position = Vector2(-155, 11)
shape = SubResource("CapsuleShape2D_mgpd2")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Cavity/Donut/Bumps"]
position = Vector2(-92, -65)
shape = SubResource("CapsuleShape2D_mgpd2")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Cavity/Donut/Bumps"]
position = Vector2(-17, -87)
shape = SubResource("CapsuleShape2D_mgpd2")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Cavity/Donut/Bumps"]
position = Vector2(73, -76)
shape = SubResource("CapsuleShape2D_mgpd2")

[node name="CenterOfCavity" type="Node2D" parent="Cavity"]

[node name="SoilSlicer" type="Node" parent="Cavity"]
script = ExtResource("28_ek3cj")
range_start = -3.142
range_end = 3.142
slices = 30
stickiness_factor = 0.0
loop_range = true
metadata/_custom_type_script = "uid://ctfsujuv2qtsj"

[node name="SeedSpawnLocation" type="Node2D" parent="."]
position = Vector2(-107, -15)
script = ExtResource("3_p4vi5")
seed_prefab = ExtResource("4_ufg6d")

[node name="HeatLamp" parent="." instance=ExtResource("7_1n734")]
position = Vector2(-80, 34)
rotation = 2.14715
scale = Vector2(0.914455, 0.914455)
particle_system = ExtResource("28_yxkay")
activation_type = 3
active_sprite = ExtResource("16_vfjhv")

[node name="SprinklerBody" parent="HeatLamp" index="0"]
position = Vector2(-6, -82)

[node name="WateringCollider" parent="HeatLamp" index="1"]
position = Vector2(-3, -82)

[node name="CollisionShape2D" parent="HeatLamp/WateringCollider" index="0"]
position = Vector2(-1.11261, 140.639)

[node name="Sprite2D" parent="HeatLamp" index="2"]
position = Vector2(-5, -83)
texture = ExtResource("17_r63ys")

[node name="CoinSlot" parent="HeatLamp" index="3"]
position = Vector2(-5, -85)

[node name="LightLamp" parent="." instance=ExtResource("7_1n734")]
position = Vector2(70, 15)
rotation = 3.98477
scale = Vector2(0.914455, 0.914455)
particle_system = ExtResource("31_pbjm3")
activation_type = 1
active_sprite = ExtResource("18_rylyh")

[node name="SprinklerBody" parent="LightLamp" index="0"]
position = Vector2(-6, -82)

[node name="WateringCollider" parent="LightLamp" index="1"]
position = Vector2(-3, -82)

[node name="CollisionShape2D" parent="LightLamp/WateringCollider" index="0"]
position = Vector2(-11.8003, 136.347)

[node name="Sprite2D" parent="LightLamp" index="2"]
position = Vector2(-5, -83)
texture = ExtResource("19_clmdp")

[node name="CoinSlot" parent="LightLamp" index="3"]
position = Vector2(-5, -85)

[node name="Sprinkler" parent="." instance=ExtResource("7_1n734")]
position = Vector2(2, 94)
scale = Vector2(0.961206, 0.963944)

[node name="SpeedSliderCoinSlot" parent="." instance=ExtResource("8_cphwb")]
position = Vector2(-498, 11)
scale = Vector2(0.519998, 0.519998)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
custom_minimum_size = Vector2(618.515, 0)
layout_mode = 0
offset_left = -486.0
offset_top = -6.0
offset_right = -486.0
offset_bottom = 94.0
scale = Vector2(0.4, 0.4)
metadata/_edit_group_ = true

[node name="SpeedSlider" type="HSlider" parent="Control/VBoxContainer" node_paths=PackedStringArray("washer")]
z_index = 1
layout_mode = 2
theme_override_icons/grabber = ExtResource("34_tijac")
theme_override_icons/grabber_highlight = ExtResource("34_tijac")
theme_override_icons/grabber_disabled = ExtResource("34_tijac")
theme_override_styles/slider = SubResource("StyleBoxEmpty_a78va")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_50xyq")
min_value = 0.5
max_value = 4.0
step = 0.0
value = 4.0
editable = false
script = ExtResource("5_4too1")
washer = NodePath("../../..")

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = -446.0
offset_top = 115.0
offset_right = -326.0
offset_bottom = 276.0
scale = Vector2(0.160001, 0.160001)
texture = ExtResource("18_1h2w1")

[node name="Duration Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = -309.0
offset_top = -125.0
offset_right = -183.0
offset_bottom = -56.0
scale = Vector2(0.747059, 0.842933)
theme_override_font_sizes/font_size = 50
text = "000"

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = -198.0
offset_top = -128.0
offset_right = -33.0
offset_bottom = 79.0
scale = Vector2(0.314877, 0.314877)
icon = ExtResource("33_4w84q")

[node name="ShopSlotsContents" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("34_oibin")
card_scene = ExtResource("36_off0q")

[node name="recepticle" type="Control" parent="Control/ShopSlotsContents"]
anchors_preset = 0
offset_left = -405.0
offset_top = 62.0
offset_right = -365.0
offset_bottom = 102.0

[node name="recepticle2" type="Control" parent="Control/ShopSlotsContents"]
anchors_preset = 0
offset_left = -336.0
offset_top = 64.0
offset_right = -296.0
offset_bottom = 104.0

[node name="recepticle3" type="Control" parent="Control/ShopSlotsContents"]
anchors_preset = 0
offset_left = -271.0
offset_top = 64.0
offset_right = -231.0
offset_bottom = 104.0

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SpeedGaugeLame" type="Sprite2D" parent="Control"]
position = Vector2(-363, 2)
scale = Vector2(0.396874, 0.396874)
texture = ExtResource("42_hmpjo")

[node name="ScoreLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = -429.0
offset_top = 207.0
offset_right = -389.0
offset_bottom = 230.0
text = "0"
script = ExtResource("40_na54g")

[node name="TargetLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = -369.0
offset_top = 207.0
offset_right = -329.0
offset_bottom = 230.0
text = "0"
script = ExtResource("41_ij2v1")

[node name="Score_Target Header" type="Label" parent="Control"]
layout_mode = 0
offset_left = -431.0
offset_top = 177.0
offset_right = -324.0
offset_bottom = 200.0
text = "Score / Target"

[node name="Bunny" type="AnimatedSprite2D" parent="Control"]
position = Vector2(-372, -1)
scale = Vector2(0.409605, 0.409605)
sprite_frames = SubResource("SpriteFrames_ee7q1")
animation = &"bunny"

[node name="Turtle" type="AnimatedSprite2D" parent="Control"]
position = Vector2(-356, -3)
scale = Vector2(0.402883, 0.402883)
sprite_frames = SubResource("SpriteFrames_ek3cj")
animation = &"turtle"

[node name="SpinCoinSlot" parent="." instance=ExtResource("8_cphwb")]
position = Vector2(-215, -97)
scale = Vector2(0.559999, 0.559999)

[node name="SeedCoinSlot" parent="." instance=ExtResource("8_cphwb")]
position = Vector2(-438, 100)
scale = Vector2(0.559999, 0.559999)

[node name="ToolCenter" type="Sprite2D" parent="."]
position = Vector2(1.00489, 81.1029)
scale = Vector2(0.140914, 0.142294)
texture = ExtResource("22_rylyh")

[node name="StaticBody2D" type="StaticBody2D" parent="ToolCenter"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToolCenter/StaticBody2D"]
shape = SubResource("CircleShape2D_rylyh")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ToolCenter/StaticBody2D"]
shape = SubResource("CircleShape2D_rylyh")

[node name="ToolCenter2" type="Sprite2D" parent="."]
position = Vector2(1.00489, 81.1029)
scale = Vector2(0.140914, 0.142294)
texture = ExtResource("22_rylyh")

[node name="BunnyClock" type="Node" parent="."]
script = ExtResource("48_pjvq3")
MAXIMUM_TIME = 50.0
START_DEPLETED = true
metadata/_custom_type_script = "uid://be70wckfs3oe"

[connection signal="input_event" from="PinballMechanism" to="." method="_on_pinball_mechanism_input_event"]
[connection signal="on_coin_deposited" from="SpeedSliderCoinSlot" to="." method="_on_speed_slider_coin_slot_on_coin_deposited"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="on_coin_deposited" from="SpinCoinSlot" to="." method="_on_spin_coin_slot_on_coin_deposited"]
[connection signal="on_coin_deposited" from="SeedCoinSlot" to="." method="_on_seed_coin_slot_on_coin_deposited"]

[editable path="HeatLamp"]
[editable path="LightLamp"]
